# lofty-quant

./: .gitignore  AGENT.md  README.md  lofty-quant-design.md  main.py  makefile  pyproject.toml
config/: settings.local.example.toml  settings.toml
notebooks/: 01_data_exploration.ipynb
scripts/: run_etl.py
src/quant/: config.py  logger.py
src/quant/data/: db.py  fields.py  repository.py  schemas.py
src/quant/etl/: __init__.py  daily_pipeline.py  etl_model.py  fetch.py  inspector.py  load.py  processed.py  raw.py  storage.py
src/quant/etl/sources/: tushare_normalizers.py  tushare_source.py
src/quant/features/: DESIGN.md  __init__.py  alternative.py  base.py  labels.py  pipeline.py  processing.py  registry.py  storage.py  technical.py  validation.py
src/quant/utils/: __init__.py  util.py
tests/: test_config.py  test_logger.py  test_utils.py
tests/test_data/: test_db.py  test_repository.py  test_schemas.py
tests/test_etl/: test_daily_pipeline.py  test_fetch.py  test_inspector.py  test_load.py  test_processed.py  test_run_etl_cli.py  test_tushare_source.py
tests/test_features/: test_labels.py  test_pipeline.py  test_processing.py  test_registry.py  test_storage.py  test_technical.py  test_validation.py
