[project]
name = "lofty-quant"
version = "0.1.0"
description = "个人 A 股量化交易系统"
requires-python = ">=3.12"
dependencies = [
    # 数据处理
    "polars>=0.20",
    "pandas>=2.2",
    "numpy>=1.26",
    # 存储
    "duckdb>=0.10",
    "pyarrow>=15.0",        # Parquet 读写
    # 数据验证
    "pydantic>=2.6",
    # 技术指标
    "pandas-ta>=0.3",       # TA-Lib 的纯 Python 替代
    # 可视化
    "plotly>=5.19",
    "kaleido>=0.2",         # Plotly 静态图导出
    # HTTP（数据拉取用）
    "httpx>=0.27",
    # 工具
    "python-dotenv>=1.0",
    "loguru>=0.7",          # 替代标准 logging
    "rich>=13.0",           # 终端美化输出
    "typer>=0.12",          # CLI 脚本框架
    "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyterlab>=4.0",
    "nbstripout>=0.7",
    "ipywidgets>=8.0",
    "pandas-stubs>=2.2",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F",   # pyflakes + pycodestyle
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "RUF",      # ruff 专有规则
    "ANN",      # 类型注解检查
]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"notebooks/**" = ["ANN", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas_ta.*", "plotly.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/notebooks/*"]
